--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="70dp"
         android:layout_marginLeft="70dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="180dp"
         android:layout_marginRight="180dp"
         android:gravity="center_horizontal|center_vertical"
@@ -115,11 +115,14 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="156dp"
         android:layout_marginRight="156dp"
+        android:layout_marginBottom="15dp"
         android:text="Login"
+        app:layout_constraintBottom_toBottomOf="@id/loginView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSend" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSend"
+        app:layout_constraintVertical_bias="0.055" />
 
     <EditText
         android:id="@+id/editTextName"
