--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,13 +116,14 @@
         android:layout_marginEnd="156dp"
         android:layout_marginRight="156dp"
         android:layout_marginBottom="15dp"
+        android:background="@drawable/button_background"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="@id/loginView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSend"
-        app:layout_constraintVertical_bias="0.055" />
+        app:layout_constraintVertical_bias="0.034" />
 
     <EditText
         android:id="@+id/editTextName"
@@ -149,7 +150,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEntry2" />
+        app:layout_constraintTop_toBottomOf="@+id/nameEntry2"
+        android:background="@drawable/button_background"/>
 
     <EditText
         android:id="@+id/editTextVerificationCode"
