--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -27,7 +27,9 @@
         android:text="Search transport"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/extending_h" />
+        app:layout_constraintTop_toTopOf="@+id/extending_h"
+        android:background="@drawable/button_background"
+        />
 
     <Button
         android:id="@+id/button4"
@@ -37,7 +39,8 @@
         android:text="Offer transport"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        android:background="@drawable/button_background"/>
 
     <Button
         android:id="@+id/button5"
@@ -47,6 +50,7 @@
         android:text="My trips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        android:background="@drawable/button_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
