--- a/app/src/main/res/layout/activity_offer_transport.xml
+++ b/app/src/main/res/layout/activity_offer_transport.xml
@@ -27,7 +27,7 @@
         android:layout_height="53dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="From:"
@@ -41,7 +41,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/extending_h" />
 
@@ -85,16 +85,17 @@
 
     <Button
         android:id="@+id/btnadd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="168dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="ADD"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.597"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/btnother"
@@ -120,6 +121,64 @@
         android:text=""
         app:layout_constraintStart_toEndOf="@+id/btnother"
         app:layout_constraintTop_toBottomOf="@+id/spinnerwhere" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="177dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="FREE STATES"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="134dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="PHONE:"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <EditText
+        android:id="@+id/editstates"
+        android:layout_width="122dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text="10"
+        android:textSize="25dp"
+        android:textColor="@color/colorPrimary"
+        android:gravity="center_horizontal|center_vertical"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+    <EditText
+        android:id="@+id/editphone"
+        android:layout_width="191dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:inputType="phone"
+        android:text=""
+        android:textColor="@color/colorPrimary"
+        android:textSize="25dp"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
