--- a/app/src/main/res/layout/activity_offer_transport.xml
+++ b/app/src/main/res/layout/activity_offer_transport.xml
@@ -166,19 +166,19 @@
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
 
-    <EditText
-        android:id="@+id/editphone"
+
+    <TextView
+        android:id="@+id/textphone"
         android:layout_width="191dp"
         android:layout_height="57dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:gravity="center_horizontal|center_vertical"
-        android:inputType="phone"
-        android:text=""
         android:textColor="@color/colorPrimary"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
