--- a/app/src/main/res/layout/self_list_layout.xml
+++ b/app/src/main/res/layout/self_list_layout.xml
@@ -12,21 +12,24 @@
 
         <TextView
             android:id="@+id/textViewFrom"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:background="@drawable/button_background"/>
 
         <TextView
             android:id="@+id/textViewTo"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:background="@drawable/button_background"/>
 
         <TextView
             android:id="@+id/textViewWhen"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:background="@drawable/button_background"/>
 
         <Button
             android:id="@+id/buttonEdit"
@@ -34,7 +37,8 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_weight="1"
-            android:text="Edit" />
+            android:text="Edit"
+            android:background="@drawable/button_background"/>
 
     </LinearLayout>
 
