--- a/app/src/main/res/layout/activity_offer_transport.xml
+++ b/app/src/main/res/layout/activity_offer_transport.xml
@@ -23,15 +23,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="94dp"
-        android:layout_height="53dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="From:"
-        android:textSize="30dp"
+        android:textColor="#000000"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/extending_h" />
 
@@ -47,15 +48,16 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="107dp"
-        android:layout_height="62dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="Where:"
-        android:textSize="30dp"
+        android:textColor="#000000"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -71,26 +73,28 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="172dp"
-        android:layout_height="59dp"
+        style="@android:style/Widget.Holo.Light.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="PICK A DATE"
+        android:text="Pick a date"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnother" />
 
     <Button
         android:id="@+id/btnadd"
-        android:layout_width="168dp"
-        android:layout_height="64dp"
+        style="@android:style/Widget.Holo.Light.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="ADD"
+        android:text="Add"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.597"
@@ -99,22 +103,23 @@
 
     <Button
         android:id="@+id/btnother"
-        android:layout_width="172dp"
-        android:layout_height="59dp"
+        style="@android:style/Widget.Holo.Light.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="OTHER CITIES"
+        android:text="Other cities"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textother"
-        android:layout_width="158dp"
-        android:layout_height="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="46dp"
@@ -124,28 +129,30 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="177dp"
-        android:layout_height="63dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="FREE STATES"
+        android:text="Free states"
+        android:textColor="#000000"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="134dp"
-        android:layout_height="59dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="PHONE:"
+        android:text="Phone:"
+        android:textColor="#000000"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -159,7 +166,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="number"
-        android:text="10"
+        android:text="4"
         android:textSize="25dp"
         android:textColor="@color/colorPrimary"
         android:gravity="center_horizontal|center_vertical"
