--- a/app/src/main/res/layout/activity_search_transport.xml
+++ b/app/src/main/res/layout/activity_search_transport.xml
@@ -23,88 +23,94 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="94dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="From:"
+        android:textColor="#000000"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/extending_h" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="192dp"
-        android:layout_height="32dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/extending_h" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="107dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
         android:text="Where:"
+        android:textColor="#000000"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="194dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="25dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="172dp"
-        android:layout_height="59dp"
+        style="@android:style/Widget.Holo.Light.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="PICK A DATE"
-        android:textSize="25dp"
+        android:text="Pick a date"
+        android:textColor="#000000"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/button7"
+        style="@android:style/Widget.Holo.Light.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="SEARCH"
-        android:textSize="25dp"
+        android:text="Search"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button8"
+        style="@android:style/Widget.Holo.Light.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/button_background"
         android:gravity="center_horizontal|center_vertical"
-        android:text="BACK"
-        android:textSize="25dp"
+        android:text="Back"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
