--- a/app/src/main/res/layout/one_list_item.xml
+++ b/app/src/main/res/layout/one_list_item.xml
@@ -5,12 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_background"
+        android:textColor="#000000"
+        android:padding="10dp"
+        />
     <TextView
         android:id="@+id/from_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_background"
         android:textColor="#000000"
+        android:layout_below="@+id/username"
         android:padding="10dp"
         />
     <TextView
@@ -48,10 +58,24 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="20dp"
-        android:text="Call"
+        android:layout_marginTop="61dp"
         android:background="@drawable/button_background"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:text="Call" />
+
+    <Button
+        android:id="@+id/modify_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/call_btn"
+        android:layout_alignParentLeft="true"
+
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="201dp"
+        android:layout_marginTop="113dp"
+        android:background="@drawable/button_background"
+        android:padding="10dp"
+        android:text="MODIFY" />
 
     <TextView
         android:id="@+id/cities_tv"
@@ -73,5 +97,18 @@
         android:padding="10dp"
         android:layout_marginBottom="20dp"
         />
+
+    <TextView
+        android:id="@+id/tripid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="243dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginRight="88dp"
+        android:visibility="invisible"
+        android:text="TextView" />
 
 </RelativeLayout>
