--- a/app/src/main/res/layout/activity_offer_transport.xml
+++ b/app/src/main/res/layout/activity_offer_transport.xml
@@ -42,7 +42,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/extending_h" />
 
@@ -65,9 +65,9 @@
         android:id="@+id/spinnerwhere"
         android:layout_width="194dp"
         android:layout_height="39dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/spinnerfrom" />
 
@@ -171,35 +171,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+
     <EditText
         android:id="@+id/editstates"
         android:layout_width="122dp"
         android:layout_height="49dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
         android:inputType="number"
         android:text="4"
-        android:textSize="25dp"
         android:textColor="@color/colorPrimary"
-        android:gravity="center_horizontal|center_vertical"
+        android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
-
 
     <TextView
         android:id="@+id/textphone"
         android:layout_width="191dp"
         android:layout_height="57dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="@color/colorPrimary"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
-        />
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
